dev-1.4.3.10
Renamed '/superpower assignForRandomization' to '/superpower force'
Added the '/soulmate force <player> <soulmate>' command, which forces two players to be rolled together when the soulmate randomization happens.
Added the '/soulmate prevent <player> <soulmate>' command, which prevents two players from being rolled together when the soulmate randomization happens.
Both of the commands don't keep that info once you close the server.